--- a/index.html
+++ b/index.html
@@ -222,7 +222,6 @@
 
             
         </section>
-        
 
         <section>
             <div class="container">
@@ -314,9 +313,20 @@
                 </li>
             </ul>
         </section>
+
+        <section>
+            <div class="kcp">
+                <div class="icecream">
+                  <div class="flavor">
+                    <div class="flavours"></div>
+                  </div>
+                  <div class="stick"></div>
+                </div>
+              </div>
+        </section>
     </main>
     <footer class="footer">
-        <p>Автор проекта: Андрей Гарифов</p>
+        <p>Авторs проекта: Андрей Гарифов и Клим С.</p>
     </footer>
 </body>
 </html>
