--- a/index.html
+++ b/index.html
@@ -224,16 +224,12 @@
         </section>
 
         <section>
-            <div class="container">
-                <div class="simple">
-                    <img src="Remove-bg.ai_1726838526063.png" alt="simple">
-                </div>
-    
-                <div class="simple_text">
-                    <a href="https://t.me/s/s1mplegod123"><h1>Нас выбирают лучшие</h1></a>
-                </div>
+            <div class="caption-top">
+                <h2>Нас выбирают сильнейшие!<br>
+                    <i class="date">S1mple</i>
+                </h2>
+                <img src="sss.png">
             </div>
-
         </section>
         <section class="karusel">
             <ul class="slides">
@@ -314,15 +310,186 @@
             </ul>
         </section>
 
-        <section>
-            <div class="kcp">
-                <div class="icecream">
-                  <div class="flavor">
-                    <div class="flavours"></div>
-                  </div>
-                  <div class="stick"></div>
+        <section class="card_two">
+            <div class="container"></div>
+                <div class="section_content">
+                    <div class="card">
+                        <div class="card__top">
+                            <img
+                            src="orig (1).png"
+                            alt="Logitech g pro x superlight"
+                            />
+                            <div class="card__label">-10%</div>
+                        </div>
+                        <div class="card__bottom">
+                            <div class="card__mainInfo">
+                                <div class="card__prices">
+                                <div class="card__price card__price--discount"> 9000 ₽ <span>Со скидкой</span></div>
+                                <div class="card__price card__price--common"> 10000 ₽ <span>Обычная</span></div>
+                            </div>
+                            <a href="https://www.dns-shop.ru/product/e9f1ea4d3d9f1b80/mys-besprovodnaa-logitech-g-pro-x-superlight-910-005880-cernyj/?ysclid=m18yaawzs1844901101&utm_medium=organic&utm_source=yandex&utm_referrer=https%3A%2F%2Fyandex.ru%2F" class="card__title">
+                                Logitech G pro X superlight
+                            </a>
+                            </div>
+                            <button class="card__add"><a href="https://www.dns-shop.ru/cart/">В корзину</a></button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card__top">
+                            <img
+                            src="6903100633.png"
+                            alt="Logitech g pro x superlight"
+                            />
+                            <div class="card__label">-50%</div>
+                        </div>
+                        <div class="card__bottom">
+                            <div class="card__mainInfo">
+                                <div class="card__prices">
+                                <div class="card__price card__price--discount"> 6500 ₽ <span>Со скидкой</span></div>
+                                <div class="card__price card__price--common"> 13000 ₽ <span>Обычная</span></div>
+                            </div>
+                            <a href="https://www.mvideo.ru/products/igrovye-naushniki-lunacy-loud-llhp01-50176253?ysclid=m195164zhr792432556" class="card__title">
+                                Lunacy Loud
+                            </a>
+                            </div>
+                            <button class="card__add"><a href="https://www.dns-shop.ru/cart/">В корзину</a></button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card__top">
+                            <img
+                            src="Razer-Cynosa-v2_5.png"
+                            alt="Logitech g pro x superlight"
+                            />
+                            <div class="card__label">-25%</div>
+                        </div>
+                        <div class="card__bottom">
+                            <div class="card__mainInfo">
+                                <div class="card__prices">
+                                <div class="card__price card__price--discount"> 3750 ₽ <span>Со скидкой</span></div>
+                                <div class="card__price card__price--common"> 5000 ₽ <span>Обычная</span></div>
+                            </div>
+                            <a href="https://www.eldorado.ru/cat/detail/igrovaya-klaviatura-razer-cynosa-v2-rz03-03400700-r3r1/" class="card__title">
+                                Razer Cynosa V2
+                            </a>
+                            </div>
+                            <button class="card__add"><a href="https://www.dns-shop.ru/cart/">В корзину</a></button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card__top">
+                            <img
+                            src="164_0-Photoroom.png"
+                            alt="Logitech g pro x superlight"
+                            />
+                            <div class="card__label">-30%</div>
+                        </div>
+                        <div class="card__bottom">
+                            <div class="card__mainInfo">
+                                <div class="card__prices">
+                                <div class="card__price card__price--discount"> 31500 ₽ <span>Со скидкой</span></div>
+                                <div class="card__price card__price--common"> 45000 ₽ <span>Обычная</span></div>
+                            </div>
+                            <a href="https://market.yandex.ru/product--formula-oh-fe08/14228707?sku=100363775013&uniqueId=955731&do-waremd5=JMaRtdvRMCYW-HpSBxWq2g" class="card__title">
+                                DXRacer Formula
+                            </a>
+                            </div>
+                            <button class="card__add"><a href="https://www.dns-shop.ru/cart/">В корзину</a></button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card__top">
+                            <img
+                            src="i.png"
+                            alt="Logitech g pro x superlight"
+                            />
+                            <div class="card__label">-20%</div>
+                        </div>
+                        <div class="card__bottom">
+                            <div class="card__mainInfo">
+                                <div class="card__prices">
+                                <div class="card__price card__price--discount"> 80000 ₽ <span>Со скидкой</span></div>
+                                <div class="card__price card__price--common"> 100000 ₽ <span>Обычная</span></div>
+                            </div>
+                            <a href="https://megamarket.ru/catalog/details/monitor-zowie-by-benq-xl2546-white-pink-100026257005/" class="card__title">
+                                Benq zowie
+                            </a>
+                            </div>
+                            <button class="card__add"><a href="https://www.dns-shop.ru/cart/">В корзину</a></button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card__top">
+                            <img
+                            src="3.png"
+                            alt="Logitech g pro x superlight"
+                            />
+                            <div class="card__label">-30%</div>
+                        </div>
+                        <div class="card__bottom">
+                            <div class="card__mainInfo">
+                                <div class="card__prices">
+                                <div class="card__price card__price--discount"> 8400 ₽ <span>Со скидкой</span></div>
+                                <div class="card__price card__price--common"> 12000 ₽ <span>Обычная</span></div>
+                            </div>
+                            <a href="https://shop.navi.gg/product/navi-x-puma-2024-pro-kit-jersey" class="card__title">
+                                NAVI x PUMA 2024 Pro Kit Jersey
+                            </a>
+                            </div>
+                            <button class="card__add"><a href="https://www.dns-shop.ru/cart/">В корзину</a></button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card__top">
+                            <img
+                            src="4-no-bg-preview (carve.photos).png"
+                            alt="Logitech g pro x superlight"
+                            />
+                            <div class="card__label">-5%</div>
+                        </div>
+                        <div class="card__bottom">
+                            <div class="card__mainInfo">
+                                <div class="card__prices">
+                                <div class="card__price card__price--discount"> 14250 ₽ <span>Со скидкой</span></div>
+                                <div class="card__price card__price--common"> 15000 ₽ <span>Обычная</span></div>
+                            </div>
+                            <a href="https://www.ozon.ru/product/hyperx-mikrofon-igrovoy-dlya-striminga-quadsast-s-belyy-797805817/?advert=m4MRNpIW4J90KSfq3QDgaKQl9xE_lwt5N0DQOmjfCgJEGYqcXOnnqpNdGrGPOyimqNbvv9iSgb5Rfnf6BUtFNG2ZV-FtgOwTaaFjb4TAEnWEqARJwy9xH0XB4ZQYxbeBnwF7HQQ0fREKUtFLVrLHagqL5ukDuAy75h_uTbA1JDBRN6etDmKQ_MhWPyXBVL99jtPQ-wDXAyPDMLaegYQq7aCwqs5wcK4nIy-5qUJRqbXzo0i0ZN3b6N8fKyhbRRl4Zwh8J1iNEg6tr0o&avtc=1&avte=1&avts=1726836261" class="card__title">
+                                HyperX
+                            </a>
+                            </div>
+                            <button class="card__add"><a href="https://www.dns-shop.ru/cart/">В корзину</a></button>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card__top">
+                            <img
+                            src="5-no-bg-preview (carve.photos).png"
+                            alt="Logitech g pro x superlight"
+                            />
+                            <div class="card__label">-50%</div>
+                        </div>
+                        <div class="card__bottom">
+                            <div class="card__mainInfo">
+                                <div class="card__prices">
+                                <div class="card__price card__price--discount"> 15000 ₽ <span>Со скидкой</span></div>
+                                <div class="card__price card__price--common"> 30000 ₽ <span>Обычная</span></div>
+                            </div>
+                            <a href="https://digital-razor.ru/catalog/computer_desks/1150661" class="card__title">
+                                EUREKA GIP 60 V2 Black
+                            </a>
+                            </div>
+                            <button class="card__add"><a href="https://www.dns-shop.ru/cart/">В корзину</a></button>
+                        </div>
+                    </div>
+                    
                 </div>
-              </div>
+            </div>
         </section>
     </main>
     <footer class="footer">
